# SecureVault

./: .gitignore  CMakeLists.txt  README.md
include/: Encryption.h  FileManager.h  Logger.h  User.h  Utils.h  Vault.h
src/: Encryption.cpp  FileManager.cpp  Logger.cpp  User.cpp  Utils.cpp  Vault.cpp  main.cpp
